welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:4: error: not found: type color
def faireV(c:color){
             ^MethodsPicture:21: error: not found: type color
	faireV(c:color);
                 ^MethodsPicture:21: error: not found: value c
	faireV(c:color);
               ^