welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
def faireMotif(){
def faireV(c:color){
	baisseBrosse();
	leveBrosse();
	avance();
	gauche();
	avance();
	baisseBrosse();
	leveBrosse();
	droite();
	avance();
	droite();
	avance();
	baisseBrosse();
	leveBrosse;
	}
avance();
for (v <- 1 to 4) {
	faireV(c:color);
	gauche();
	avance();
	gauche();
	avance();
}
for (p <- 1 to 3) {
	avance();
}
}
for (motif <- 1 to 3) {

for (bas <-1 to 3) {
	faireMotif();
		avance(); 
	}
gauche()
for (pas <- 1 to 5) {
	(avance());
}
droite();
}	
}

